Cleanup for result printing, SUT README generation
Former-commit-id: 82c7784e7f295b5803b35d8bd3658ff61b9b1c3f

--- a/cm-mlops/script/app-mlperf-inference/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference/_cm.yaml
@@ -99,6 +99,8 @@ deps:
     names:
     - inference-src
 
+  - tags: get,mlperf,inference,utils
+
 posthook_deps:
   - tags: get,mlperf,sut,description #populate system meta information like framework
 
