Move pip install for cmind python to a separate script
Former-commit-id: a1c9149b27d004d0fe48f1a775cfaf4931ac7e35

--- a/cm-mlops/script/run-mlperf-inference-app/_cm.yaml
+++ b/cm-mlops/script/run-mlperf-inference-app/_cm.yaml
@@ -108,7 +108,7 @@ deps:
     - get-mlperf-inference-results-dir
   skip_if_env:
     OUTPUT_BASE_DIR: [ on ]
-- tags: get,generic-python-lib,_package.tabulate
+- tags: install,pip-package,for-cmind-python,_package.tabulate
 - tags: get,mlperf,inference,utils
 
 docker:
