fixing cudnn description and generic loadgen app
Former-commit-id: fa8a42245702706a6de4f3347cd049e6d6bca5d8

--- a/cm-mlops/script/app-loadgen-generic-python/_cm.yaml
+++ b/cm-mlops/script/app-loadgen-generic-python/_cm.yaml
@@ -138,13 +138,17 @@ variations:
     env:
       CM_MLPERF_DEVICE:
         cpu
+      CM_MLPERF_EXECUTION_PROVIDER:
+        CPUExecutionProvider
+
   cuda:
     group:
       device
     env:
       CM_MLPERF_DEVICE:
         gpu
-  
+      CM_MLPERF_EXECUTION_PROVIDER:
+        CUDAExecutionProvider
 
 
 
