--- a/cm-mlops/script/app-mlperf-inference/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference/_cm.yaml
@@ -73,7 +73,7 @@ new_env_keys:
 
 new_state_keys:
   - app_mlperf_inference_*
-  - CM_MLPERF_RESULTS
+  - cm-mlperf-inference-results*
 
 # Dependencies on other CM scripts
 deps:
