--- a/cm-mlops/script/install-pip-package-for-cmind-python/_cm.yaml
+++ b/cm-mlops/script/install-pip-package-for-cmind-python/_cm.yaml
@@ -1,7 +1,7 @@
 alias: install-pip-package-for-cmind-python
 automation_alias: script
 automation_uid: 5b4e0237da074764
-cache: false
+cache: true
 tags:
 - install
 - pip
