--- a/cm-mlops/script/run-mlperf-inference-app/_cm.yaml
+++ b/cm-mlops/script/run-mlperf-inference-app/_cm.yaml
@@ -87,6 +87,8 @@ input_mapping:
   target_latency: CM_MLPERF_LOADGEN_TARGET_LATENCY
   target_qps: CM_MLPERF_LOADGEN_TARGET_QPS
   test_query_count: CM_TEST_QUERY_COUNT
+  threads: CM_NUM_THREADS
+  batch_size: CM_MLPERF_LOADGEN_MAX_BATCHSIZE
 
 new_state_keys:
 - app_mlperf_inference_*
