fixed ABTF loadgen

--- a/cm-mlops/script/app-loadgen-generic-python/_cm.yaml
+++ b/cm-mlops/script/app-loadgen-generic-python/_cm.yaml
@@ -227,3 +227,10 @@ docker:
     - modelpath
     - env.CM_ML_MODEL_FILE_WITH_PATH
     - output_dir
+    - scenario
+    - runner
+    - concurrency
+    - intraop
+    - interop
+    - execmode
+    - samples
