--- a/cm-mlops/script/test-abtf-ssd-pytorch/_cm.yaml
+++ b/cm-mlops/script/test-abtf-ssd-pytorch/_cm.yaml
@@ -6,6 +6,13 @@ automation_uid: 5b4e0237da074764
 
 category: Tests
 
+tags:
+- test
+- abtf
+- ssd
+- pytorch
+- ssd-pytorch
+
 input_mapping:
   input: CM_INPUT_IMAGE
   output: CM_OUTPUT_IMAGE
@@ -40,12 +47,6 @@ deps:
   extra_cache_tags: abtf,ssd,pytorch
 
 
-tags:
-- test
-- abtf
-- ssd
-- pytorch
-- ssd-pytorch
 
 variations:
   cpu:
@@ -62,3 +63,45 @@ variations:
     env:
       CM_DEVICE:
         cuda
+
+input_description:
+  modelpath: 
+    desc: Full path to a model
+  ep: 
+    desc: ONNX Execution provider
+  scenario: 
+    desc: MLPerf LoadGen scenario
+  samples: 
+    desc: Number of samples
+    default: 2
+  runner: 
+    desc: MLPerf runner
+  execmode: 
+    desc: MLPerf exec mode
+  output_dir: 
+    desc: MLPerf output directory
+  concurrency: 
+    desc: MLPerf concurrency
+  intraop: 
+    desc: MLPerf intra op threads
+  interop: 
+    desc: MLPerf inter op threads
+
+docker:
+  skip_run_cmd: 'no'
+  all_gpus: 'yes'
+  input_paths:
+    - modelpath
+    - env.CM_ML_MODEL_FILE_WITH_PATH
+    - output_dir
+  skip_input_for_fake_run:
+    - modelpath
+    - env.CM_ML_MODEL_FILE_WITH_PATH
+    - output_dir
+    - scenario
+    - runner
+    - concurrency
+    - intraop
+    - interop
+    - execmode
+    - samples
