Use nvidia-pycocotools only for valid runs
Former-commit-id: e587c8d66fb63c17686572521c7e720876cf2808

--- a/cm-mlops/script/app-mlperf-inference/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference/_cm.yaml
@@ -870,6 +870,11 @@ variations:
       CM_OUTPUT_FOLDER_NAME: test_results
       CM_MLPERF_RUN_STYLE: test
 
+  valid,retinanet:
+    adr:
+      openimages-accuracy-script:
+        tags: _nvidia-pycocotools
+
   valid:
     group: execution-mode
     env:
