Use nvidia alias for nvidia-original
Former-commit-id: c70bd00c8b4abdcdf946767f40163f5d152b3928

--- a/cm-mlops/script/app-mlperf-inference/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference/_cm.yaml
@@ -195,32 +195,7 @@ variations:
     alias: reference
   
   nvidia:
-    default_variations:
-      backend: tensorrt
-      device: cuda
-    group:
-      implementation
-    add_deps_recursive:
-      imagenet-accuracy-script:
-        tags: _int32
-      squad-accuracy-script:
-        tags: _float16
-      python:
-        version-min: 3.8.0
-    env:
-      CM_MLPERF_IMPLEMENTATION: nvidia
-      CM_SQUAD_ACCURACY_DTYPE: float16
-      CM_IMAGENET_ACCURACY_DTYPE: int32
-    deps:
-      ## Nvidia common code
-      - tags: get,mlperf,inference,nvidia,common-code
-      - tags: get,mlperf,training,src
-      - tags: get,generic-python-lib,_nvidia-pyindex
-      - tags: get,generic-python-lib,_nvidia-tensorrt
-      - tags: get,generic-python-lib,_numpy
-      - tags: get,generic-python-lib,_pycuda
-      - tags: get,generic-python-lib,_mlperf_logging
-      - tags: get,generic-python-lib,_onnx
+    alias: nvidia-original
 
   reference,gptj_:
     default_variations:
