add --docker option to benchmark-any
Former-commit-id: 90dd477772f8ef23b6d07119747c32dab17abe89

--- a/cm-mlops/script/benchmark-any-mlperf-inference-implementation/_cm.yaml
+++ b/cm-mlops/script/benchmark-any-mlperf-inference-implementation/_cm.yaml
@@ -23,6 +23,7 @@ input_mapping:
   category: CATEGORY
   power_server: POWER_SERVER
   power_server_port: POWER_SERVER_PORT
+  extra_args: EXTRA_ARGS
 
 tags:
   - benchmark
