turn on custom system nvidia by default
Former-commit-id: 77b8015a3abbb7f83c77781b5be87983b4cfd01d

--- a/cm-mlops/script/build-mlperf-inference-server-nvidia/_cm.yaml
+++ b/cm-mlops/script/build-mlperf-inference-server-nvidia/_cm.yaml
@@ -27,6 +27,7 @@ new_env_keys:
 default_env:
   CM_MAKE_BUILD_COMMAND: build
   CM_MAKE_CLEAN: "no"
+  CM_CUSTOM_SYSTEM_NVIDIA: "yes"
 
 input_mapping:
   custom_system: CM_CUSTOM_SYSTEM_NVIDIA
