Use CM cache for mlperf inference submission generation
Former-commit-id: fb4f0f5ad424dce86f900e2082c946f32fbbe51f

--- a/cm-mlops/script/generate-mlperf-inference-user-conf/_cm.yaml
+++ b/cm-mlops/script/generate-mlperf-inference-user-conf/_cm.yaml
@@ -77,7 +77,8 @@ deps:
     names:
       - get-mlperf-results-dir
     skip_if_env:
-      OUTPUT_BASE_DIR: [ on ]
+      OUTPUT_BASE_DIR:
+        - "on"
 
   ########################################################################
   # Install MLPerf inference dependencies
