Support num_gpus in nvidia configs
Former-commit-id: 734e9d1c16a8037f46bbe37f0e935ab45958d15e

--- a/cm-mlops/script/benchmark-any-mlperf-inference-implementation/_cm.yaml
+++ b/cm-mlops/script/benchmark-any-mlperf-inference-implementation/_cm.yaml
@@ -190,7 +190,7 @@ variations:
 
   sapphire-rapids.24c,nvidia:
     default_env:
-      EXTRA_ARGS: " --gpu_name=rtx_4090"
+      EXTRA_ARGS: " --gpu_name=rtx_4090 --adr.mlperf-inference-implementation.tags=_num_gpus.2"
     state:
       resnet50:
         cuda:
