Added dlrmv2 targetqps for SPR

--- a/cm-mlops/script/benchmark-any-mlperf-inference-implementation/_cm.yaml
+++ b/cm-mlops/script/benchmark-any-mlperf-inference-implementation/_cm.yaml
@@ -226,6 +226,18 @@ variations:
         cuda:
           tensorrt:
             offline_target_qps: 9
+      gptj-99.9:
+        cuda:
+          tensorrt:
+            offline_target_qps: 9
+      dlrm-v2-99:
+        cuda:
+          tensorrt:
+            offline_target_qps: 1500
+      dlrm-v2-99.9:
+        cuda:
+          tensorrt:
+            offline_target_qps: 1500
 
   orin.32g:
     group: sut
