--- a/cm-mlops/cfg/benchmark-list/loadgen-python.yaml
+++ b/cm-mlops/cfg/benchmark-list/loadgen-python.yaml
@@ -7,3 +7,8 @@ name: "ML models with LoadGen (Python; Linux/MacOS/Windows) - dev"
 urls:
 - name: "GitHub dev page"
   url: "https://github.com/mlcommons/ck/tree/master/cm-mlops/script/app-loadgen-generic-python"
+
+supported_compute:
+- cpu,x64
+- cpu,arm64
+- gpu,nvidia
