--- a/cm-mlops/cfg/benchmark-list/mlperf-inference.yaml
+++ b/cm-mlops/cfg/benchmark-list/mlperf-inference.yaml
@@ -11,3 +11,5 @@ urls:
   url: "https://github.com/mlcommons/inference"
 - name: "MLCommons CM automation (under development)"
   url: "https://github.com/mlcommons/ck/tree/master/docs/mlperf/inference"
+
+script_name: run-mlperf-inference-app,4a5d5b13fd7e4ac8
