--- a/cm-mlops/cfg/benchmark-list/mlperf-abtf.yaml
+++ b/cm-mlops/cfg/benchmark-list/mlperf-abtf.yaml
@@ -9,3 +9,8 @@ urls:
   url: "https://mlcommons.org/2023/05/avcc-and-mlcommons-join-forces-to-develop-an-automotive-industry-standard/"
 - name: "MLCommons CM automation (under development)"
   url: "https://access.cknowledge.org/playground/?action=scripts"
+
+supported_compute:
+- cpu,x64
+- cpu,arm64
+- gpu,nvidia
