--- a/cm-mlops/script/app-stable-diffusion-onnx-py/_cm.yaml
+++ b/cm-mlops/script/app-stable-diffusion-onnx-py/_cm.yaml
@@ -8,11 +8,14 @@ category: "Modular AI/ML application pipeline"
 
 tags:
 - app
+- modular
 - stable
 - diffusion
 - stable-diffusion
 - onnx
 - python
+
+tags_help: "modular python app stable-diffusion onnx"
 
 
 deps:
