added default --quiet to MLPerf inference by default
Former-commit-id: f568fa05676accdf44820d1bebe39a6788013ee3

--- a/cm-mlops/script/run-mlperf-inference-app/_cm.yaml
+++ b/cm-mlops/script/run-mlperf-inference-app/_cm.yaml
@@ -409,7 +409,7 @@ input_description:
     desc: Set LoadGen Offline target QPS
   quiet:
     boolean: true
-    default: false
+    default: true
     desc: Quiet run (select default values for all questions)
   server_target_qps:
     desc: Set Server target QPS
