Fix inherit-variation tags for nvidia-harness
Former-commit-id: cda1ea192963a2593ca0ac321ec102080bed36d2

--- a/cm-mlops/script/reproduce-mlperf-inference-nvidia/_cm.yaml
+++ b/cm-mlops/script/reproduce-mlperf-inference-nvidia/_cm.yaml
@@ -470,9 +470,6 @@ variations:
       CM_MODEL_BATCH_SIZE: "#"
       CM_MLPERF_NVIDIA_HARNESS_GPU_BATCH_SIZE: "#"
       #CM_MLPERF_SUT_NAME_RUN_CONFIG_SUFFIX1: "gpu_batch_size.#"
-    adr:
-      build-engine:
-        tags: _batch_size.#
 
   dla_batch_size.#:
     group: dla-batch-size
@@ -635,7 +632,7 @@ variations:
           - device-memory
           - gpu-name
           - batch-size
-          - num_gpus
+          - num-gpus
           - triton
           - build-engine-options
         skip_if_env:
@@ -651,7 +648,7 @@ variations:
           - loadgen-scenario
           - device-memory
           - gpu-name
-          - num_gpus
+          - num-gpus
           - batch-size
           - triton
           - power-mode
@@ -675,7 +672,7 @@ variations:
           - loadgen-scenario
           - device-memory
           - device-type
-          - num_gpus
+          - num-gpus
           - power-mode
           - gpu-name
           - triton
@@ -729,8 +726,8 @@ variations:
           - build-engine
         skip_inherit_variation_groups:
           - run-mode
-          - gpu_name
-          - num_gpus
+          - gpu-name
+          - num-gpus
           - device-memory
         force_cache: true
 
@@ -739,10 +736,10 @@ variations:
         skip_inherit_variation_groups:
           - run-mode
           - loadgen-scenario
-          - num_gpus
+          - num-gpus
           - device-memory
           - power-mode
-          - gpu_name
+          - gpu-name
           - batch-size
           - triton
           - build-engine-options
@@ -757,8 +754,8 @@ variations:
           - run-mode
           - loadgen-scenario
           - device-memory
-          - gpu_name
-          - num_gpus
+          - gpu-name
+          - num-gpus
           - power-mode
           - batch-size
           - build-engine-options
@@ -916,13 +913,13 @@ variations:
     default_variations:
       batch-size: batch_size.2048
 
-  num_gpus.#:
-    group: num_gpus
+  num-gpus.#:
+    group: num-gpus
     env:
       CM_NVIDIA_NUM_GPUS: "#"
 
-  num_gpus.1:
-    group: num_gpus
+  num-gpus.1:
+    group: num-gpus
     default: true
     env:
       CM_NVIDIA_NUM_GPUS: "1"
@@ -931,11 +928,11 @@ variations:
     default_variations:
       batch-size: batch_size.64
 
-  resnet50,multistream,run_harness:
+  resnet50,multistream,run_harness,num-gpus.1:
     default_variations:
       batch-size: batch_size.8
 
-  resnet50,multistream,run_harness,num_gpus.2:
+  resnet50,multistream,run_harness,num-gpus.2:
     default_variations:
       batch-size: batch_size.4
 
