Added 4090 gptj batchsize
Former-commit-id: cbab97a725a6967b91431220d6aba25b0361a738

--- a/cm-mlops/script/reproduce-mlperf-inference-nvidia/_cm.yaml
+++ b/cm-mlops/script/reproduce-mlperf-inference-nvidia/_cm.yaml
@@ -1089,6 +1089,14 @@ variations:
     default_variations:
       batch-size: batch_size.2048
 
+  rtx_4090,gptj_,offline,run_harness:
+    default_variations:
+      batch-size: batch_size.7
+
+  rtx_4090,gptj_,server,run_harness:
+    default_variations:
+      batch-size: batch_size.7
+
   rtx_4090,dlrm_,offline,run_harness:
     default_variations:
       batch-size: batch_size.1400
