added possibility to show MLPerf GUI with pruned parameters based on selected scenarios
Former-commit-id: cefdb626c4e59f741c9b5f13e01378c0222cdfd8

--- a/cm-mlops/cfg/benchmark-list/mlperf-inference.yaml
+++ b/cm-mlops/cfg/benchmark-list/mlperf-inference.yaml
@@ -13,3 +13,10 @@ urls:
   url: "https://github.com/mlcommons/ck/tree/master/docs/mlperf/inference"
 
 script_name: run-mlperf-inference-app,4a5d5b13fd7e4ac8
+
+supported_compute:
+- cpu,x64
+- cpu,arm64
+- gpu,nvidia
+- accelerator,acc,qualcomm,ai,100,ai-100
+- tpu,google
