--- a/cm-mlops/cfg/benchmark-list/mlperf-training.yaml
+++ b/cm-mlops/cfg/benchmark-list/mlperf-training.yaml
@@ -11,3 +11,8 @@ urls:
   url: "https://github.com/mlcommons/training"
 - name: "MLCommons CM automation (under development)"
   url: "https://github.com/mlcommons/ck/blob/master/docs/tutorials/reproduce-mlperf-training.md"
+
+supported_compute:
+- cpu,x64
+- gpu,nvidia
+- tpu,google
