--- a/cm-mlops/cfg/benchmark-list/mlperf-mobile.yaml
+++ b/cm-mlops/cfg/benchmark-list/mlperf-mobile.yaml
@@ -9,3 +9,6 @@ urls:
   url: "https://mlcommons.org/benchmarks/inference-mobile/"
 - name: "GitHub page for mobile app"
   url: "https://github.com/mlcommons/mobile_app_open"
+
+supported_compute:
+- cpu,arm64
