added category and division to MLperf gui
Former-commit-id: 2af2a71e67abc2fbc74717b0c03f8afaafcd3252

--- a/cm-mlops/script/run-mlperf-inference-app/_cm.yaml
+++ b/cm-mlops/script/run-mlperf-inference-app/_cm.yaml
@@ -265,6 +265,21 @@ versions:
   r2.1: {}
 
 input_description:
+  division:
+    choices:
+    - 'open'
+    - 'close'
+    default: 'open'
+    desc: MLPerf division
+    sort: 50
+  category:
+    choices:
+    - 'edge'
+    - 'server'
+    - 'network'
+    default: 'edge'
+    desc: MLPerf category
+    sort: 60
   device:
     choices:
     - cpu
