improving MLPerf GUI

--- a/cm-mlops/script/run-mlperf-inference-app/_cm.yaml
+++ b/cm-mlops/script/run-mlperf-inference-app/_cm.yaml
@@ -268,14 +268,14 @@ input_description:
   division:
     choices:
     - 'open'
-    - 'close'
+    - 'closed'
     default: 'open'
     desc: MLPerf division
     sort: 50
   category:
     choices:
     - 'edge'
-    - 'server'
+    - 'datacenter'
     - 'network'
     default: 'edge'
     desc: MLPerf category
