--- a/cm-mlops/cfg/benchmark-list/loadgen-cpp.yaml
+++ b/cm-mlops/cfg/benchmark-list/loadgen-cpp.yaml
@@ -11,3 +11,9 @@ urls:
 supported_compute:
 - cpu,x64
 - gpu,nvidia
+
+script_name: run-mlperf-inference-app,4a5d5b13fd7e4ac8
+
+bench_input:
+  mlperf_inference_implementation: mil
+  
