--- a/cm-mlops/cfg/benchmark-list/mlperf-inference.yaml
+++ b/cm-mlops/cfg/benchmark-list/mlperf-inference.yaml
@@ -9,6 +9,8 @@ urls:
   url: "https://mlcommons.org/benchmarks/inference"
 - name: "GitHub dev page"
   url: "https://github.com/mlcommons/inference"
+- name: "ArXiv paper"
+  url: "https://arxiv.org/abs/1911.02549"
 - name: "MLCommons CM automation (under development)"
   url: "https://github.com/mlcommons/ck/tree/master/docs/mlperf/inference"
 
