--- a/cm-mlops/script/run-mlperf-inference-app/_cm.yaml
+++ b/cm-mlops/script/run-mlperf-inference-app/_cm.yaml
@@ -455,4 +455,11 @@ input_description:
     desc: Print results dictionary to console at the end of the run
     boolean: true
     default: true
+  jf:
+    desc: Record results dictionary to file at the end of the run
+    default: output.json
+  time:
+    desc: Print script execution time at the end of the run
+    boolean: true
+    default: true
     
