added more reproducibility tests

--- a/cm-mlops/cfg/benchmark-run-mlperf-inference-v3.1/_cm.yaml
+++ b/cm-mlops/cfg/benchmark-run-mlperf-inference-v3.1/_cm.yaml
@@ -28,6 +28,8 @@ view_dimensions:
   - "MLPerf backend"
 - - input.model
   - "MLPerf model"
+- - input.precision
+  - "Model precision"
 - - input.scenario
   - "MLPerf scenario"
 - - input.host_os
